# animal-etl-pipeline

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: client.py  loading_logic.py  transformation_logic.py
tests/: test_transform.py
